
2023-02-09  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (validate_alphabet): slightly rewritten to fix compiler warnings
	* config.c, pparse.y (ppp_replace_list_add), reserved.c (is_invalid_word),
	  tree.c, tree.h, typeck.c: minor adjustments to fix compiler warnings
	* field.c (validate_multi_value, validate_elem_value),
	  parser.y (setup_external_definition): fixed analyzer warnings by switching
	  "for" (hint at "possibly NULL" at start) to "while"

2023-02-08  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (rep_name_list): elide PICTURE string in symbol listing
	  when too long (also fixing a possible SIGSEGV on WIN32)
	* cobc.h: fixed prototype for cobc_set_listing_header_code,
	  cobc_get_margin_a, cobc_get_margin_b
	* cobc.c: remove trailing slash from -I and -L as those break some
	  tab-completed command lines and -MD generation
	* cobc.c [_WIN32, DOS]: replace forward slash to backslash for -I
	  fixing -MD generation on mingws/msys environments
	* pplex.l (ppcopy_find_file, ppcopy): replace slash to match system and
	  always place name in buffer to allow this

2023-02-07  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_build_optim_cond): generate cob_bcd_cmp call for COMP-3/COMP-6
	* typeck.c (cb_build_optim_cond). codeoptim.def, codeoptim.c, codegen.c:
	  disabled "local" functions for COB_CMP_PACKED_INT, COB_GET_PACKED_INT,
	  COB_GET_PACKED_INT64 as the updated libcob variants are not slower, so
	  generate calls to these instead

2023-02-03  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_build_optim_add), codeoptim.def, codeoptim.c, codegen.c:
	  added COB_GET_PACKED_INT64, COB_ADD_PACKED_INT64 for fast-resolving/
	  adding PACKED-DECIMAL fields with 9-18 digits
	* typeck.c (cb_build_optim_sub), codegen.c, tree.h
	  (CB_CAST_NEGATIVE_INTEGER, CB_CAST_NEGATIVE_LONG_INT): wrap subtractions
	  on PACKED-DECIMAL fields in a negative value used with optimized
	  packed_add